// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`commit command guard should match guard 1`] = `
{
  "title": [Function],
}
`;

exports[`commit command prompts with default commit content in commit mode should not fill default title and message 1`] = `
[
  {
    "message": "Choose a gitmoji:",
    "name": "gitmoji",
    "source": [Function],
    "type": "autocomplete",
  },
  {
    "message": "Enter the scope of current changes:",
    "name": "scope",
  },
  {
    "message": "Enter the commit title",
    "name": "title",
    "transformer": [Function],
    "validate": [Function],
  },
  {
    "message": "Enter the commit message:",
    "name": "message",
  },
]
`;

exports[`commit command prompts with default commit content in hook mode should match the default title and message 1`] = `
[
  {
    "message": "Choose a gitmoji:",
    "name": "gitmoji",
    "source": [Function],
    "type": "autocomplete",
  },
  {
    "message": "Enter the scope of current changes:",
    "name": "scope",
  },
  {
    "default": "commit title",
    "message": "Enter the commit title",
    "name": "title",
    "transformer": [Function],
    "validate": [Function],
  },
  {
    "default": "commit message",
    "message": "Enter the commit message:",
    "name": "message",
  },
]
`;

exports[`commit command prompts with list of scopes prompt should match the array of questions with scopes list 1`] = `
[
  {
    "message": "Choose a gitmoji:",
    "name": "gitmoji",
    "source": [Function],
    "type": "autocomplete",
  },
  {
    "message": "Enter the scope of current changes:",
    "name": "scope",
    "source": [Function],
    "type": "autocomplete",
  },
  {
    "message": "Enter the commit title",
    "name": "title",
    "transformer": [Function],
    "validate": [Function],
  },
  {
    "message": "Enter the commit message:",
    "name": "message",
  },
]
`;

exports[`commit command prompts with scope prompt with scope enabled should match the array of questions 1`] = `
[
  {
    "message": "Choose a gitmoji:",
    "name": "gitmoji",
    "source": [Function],
    "type": "autocomplete",
  },
  {
    "message": "Enter the scope of current changes:",
    "name": "scope",
  },
  {
    "message": "Enter the commit title",
    "name": "title",
    "transformer": [Function],
    "validate": [Function],
  },
  {
    "message": "Enter the commit message:",
    "name": "message",
  },
]
`;

exports[`commit command prompts without message prompt should match the array of questions 1`] = `
[
  {
    "message": "Choose a gitmoji:",
    "name": "gitmoji",
    "source": [Function],
    "type": "autocomplete",
  },
  {
    "message": "Enter the scope of current changes:",
    "name": "scope",
  },
  {
    "message": "Enter the commit title",
    "name": "title",
    "transformer": [Function],
    "validate": [Function],
  },
]
`;

exports[`commit command prompts without scope prompt should match the array of questions 1`] = `
[
  {
    "message": "Choose a gitmoji:",
    "name": "gitmoji",
    "source": [Function],
    "type": "autocomplete",
  },
  {
    "message": "Enter the commit title",
    "name": "title",
    "transformer": [Function],
    "validate": [Function],
  },
  {
    "message": "Enter the commit message:",
    "name": "message",
  },
]
`;

exports[`commit command withClient with autoAdd, signed commits and scope should call inquirer with prompts 1`] = `
[
  [
    [
      {
        "message": "Choose a gitmoji:",
        "name": "gitmoji",
        "source": [Function],
        "type": "autocomplete",
      },
      {
        "message": "Enter the commit title",
        "name": "title",
        "transformer": [Function],
        "validate": [Function],
      },
      {
        "message": "Enter the commit message:",
        "name": "message",
      },
    ],
  ],
  [
    [
      {
        "message": "Choose a gitmoji:",
        "name": "gitmoji",
        "source": [Function],
        "type": "autocomplete",
      },
      {
        "message": "Enter the commit title",
        "name": "title",
        "transformer": [Function],
        "validate": [Function],
      },
      {
        "message": "Enter the commit message:",
        "name": "message",
      },
    ],
  ],
]
`;

exports[`commit command withClient with no autoAdd and no signed commits and no scope should call inquirer with prompts 1`] = `
[
  [
    [
      {
        "message": "Choose a gitmoji:",
        "name": "gitmoji",
        "source": [Function],
        "type": "autocomplete",
      },
      {
        "message": "Enter the commit title",
        "name": "title",
        "transformer": [Function],
        "validate": [Function],
      },
      {
        "message": "Enter the commit message:",
        "name": "message",
      },
    ],
  ],
]
`;

exports[`commit command withClient with the commit hook created should call inquirer with prompts 1`] = `
[
  [
    [
      {
        "message": "Choose a gitmoji:",
        "name": "gitmoji",
        "source": [Function],
        "type": "autocomplete",
      },
      {
        "message": "Enter the commit title",
        "name": "title",
        "transformer": [Function],
        "validate": [Function],
      },
      {
        "message": "Enter the commit message:",
        "name": "message",
      },
    ],
  ],
  [
    [
      {
        "message": "Choose a gitmoji:",
        "name": "gitmoji",
        "source": [Function],
        "type": "autocomplete",
      },
      {
        "message": "Enter the commit title",
        "name": "title",
        "transformer": [Function],
        "validate": [Function],
      },
      {
        "message": "Enter the commit message:",
        "name": "message",
      },
    ],
  ],
  [
    [
      {
        "message": "Choose a gitmoji:",
        "name": "gitmoji",
        "source": [Function],
        "type": "autocomplete",
      },
      {
        "message": "Enter the commit title",
        "name": "title",
        "transformer": [Function],
        "validate": [Function],
      },
      {
        "message": "Enter the commit message:",
        "name": "message",
      },
    ],
  ],
]
`;
